--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "@vitejs/plugin-vue": "^4.0.0",
+        "autoprefixer": "^10.4.16",
         "axios": "^1.6.1",
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.8.0",
+        "postcss": "^8.4.32",
         "sass": "^1.56.1",
+        "tailwindcss": "^3.3.6",
         "vite": "^4.0.0",
-        "vue": "^3.2.37"
+        "vue": "^3.2.36"
+    },
+    "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue3": "^0.6.0",
+        "@inertiajs/progress": "^0.2.7"
     }
 }
